<resources>
    <string name="app_name">Wise Note</string>
    <!--Shared preference file key value-->
    <string name="record_permission_required">Record permission is required.</string>
    <string name="record_permission_not_available">Record permission is not available.</string>
    <string name="record_permission_granted">Record permission was granted.</string>
    <string name="record_permission_denied">Record permission request was denied.</string>
    <string name="signin_title">[ SIGN IN ]</string>
    <string name="signin">SIGN IN</string>
    <string name="signup_title">[ SIGN UP ]</string>
    <string name="signup">SIGN UP</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD</string>
    <string name="check_password">CHECK PASSWORD</string>
    <!-- Page Top Icon Description  -->
    <string name="menu_icon_description">Menu icon shows the hamburger menu.</string>
    <string name="search_icon_description">Search icon shows the search page.</string>
    <!-- Page Bottom Icon Description -->
    <string name="home_icon_description">Home icon moves page to the homepage.</string>
    <string name="plus_icon_description">The Plus icon displays a pop-up where you can pick to record or add files.</string>
    <string name="person_icon_description">Person icon moves page to the my page.</string>
    <!-- Homepage String Resource  -->
    <string name="home_middle_title">Note List</string>
    <string name="home_description">Every notes you wrote.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <!-- 김선웅 -->
    <string name="change">change</string>
    <string name="nameT">Name</string>
    <string name="passwordT">password</string>
    <string name="emailT">Email</string>
    <string name="phoneT">phone</string>
    <string name="logoutB">logout</string>
    <string name="deleteB">Delete my account</string>
    <string name="name">김선웅</string>
    <string name="My_password">password</string>
    <string name="email">tkfdkskarl56@naver.com</string>
    <string name="phone">010-8921-8709</string>
    <string name="move2">move2</string>
    <string name="edit">EDIT</string>
    <string name="note_title">note_title</string>
    <string name="note_date">date</string>
    <string name="note_category">category</string>
    <string name="note_main_toggle">Main</string>
    <string name="note_text_toggle">Text</string>
    <string name="note_memo_toggle">Memo</string>
    <string name="note_summary">Summary</string>
    <string name="note_summary_text">EDIT</string>
    <string name="note_voca">Voca</string>
    <string name='record_title'>Write file name \nand select group</string>
    <string name="record_ok"><u>OK</u></string>


</resources>
