<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/hamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/menu_icon_description"
        android:maxWidth="20dp"
        android:maxHeight="20dp"
        android:src="@drawable/icon_menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="25dp"
        android:layout_weight="1"
        android:fontFamily="@font/current"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#131313"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="20dp"
        android:maxHeight="20dp"
        android:src="@drawable/icon_search"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/search_icon_description" />
</LinearLayout>
