<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6CC46"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/current_regular"
            android:gravity="bottom|center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="60sp"

            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="153dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/current_regular"
            android:gravity="center"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="34sp"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/current_regular"
                    android:text="@string/id"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/signupId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView6"
                    android:autoText="false"
                    android:background="@drawable/text_border_radius"
                    android:ems="10"
                    android:fontFamily="@font/current_regular"
                    android:hint="@string/id"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/current_regular"
                    android:text="@string/password"
                    android:textSize="20sp"
                     />

                <EditText
                    android:id="@+id/signupPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView7"
                    android:background="@drawable/text_border_radius"
                    android:ems="10"
                    android:fontFamily="@font/current_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/current_regular"
                    android:text="@string/check_password"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/signupCheckPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView9"
                    android:background="@drawable/text_border_radius"
                    android:ems="10"
                    android:fontFamily="@font/current_regular"
                    android:hint="@string/check_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/button_border_radius"
                android:fontFamily="@font/current_regular"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
