<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6CC46"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/current"
                android:gravity="bottom|center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="153dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/current"
                android:gravity="center"
                android:text="@string/signin_title"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="90dp"
                android:paddingRight="90dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/current"
                        android:text="@string/id"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:paddingLeft="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_border_radius">

                        <EditText
                            android:id="@+id/signinId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bahnschrift"
                            android:hint="ID"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            android:background="@null"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/current"
                        android:text="@string/password"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:paddingLeft="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_border_radius">

                        <EditText
                            android:id="@+id/signinPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bahnschrift"
                            android:hint="PASSWORD"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:background="@null"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signinButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/button_border_radius"
                    android:fontFamily="@font/current"
                    android:text="@string/signin"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
